src/document/snapshots/protols__document__rename__test__can_rename-3.snap
---
source: src/document/rename.rs
expression: tree.can_rename(pos_inner_type)
---
start:
  line: 19
  character: 9
end:
  line: 19
  character: 15
