src/document/snapshots/protols__document__rename__test__can_rename-4.snap
---
source: src/document/rename.rs
expression: tree.can_rename(pos_outer_type)
---
start:
  line: 19
  character: 4
end:
  line: 19
  character: 8
