src/document/snapshots/protols__document__rename__test__can_rename.snap
---
source: src/document/rename.rs
expression: tree.can_rename(pos_rename)
---
start:
  line: 5
  character: 8
end:
  line: 5
  character: 12
