src/document/snapshots/protols__document__rename__test__can_rename_field_and_enum_value-2.snap
---
source: src/document/rename.rs
expression: parsed.can_rename(pos_plain_field)
---
start:
  line: 14
  character: 11
end:
  line: 14
  character: 16
