src/document/snapshots/protols__document__rename__test__can_rename_field_and_enum_value.snap
---
source: src/document/rename.rs
expression: parsed.can_rename(pos_type_ref)
---
start:
  line: 15
  character: 4
end:
  line: 15
  character: 10
