src/document/snapshots/protols__document__rename__test__can_rename_service_and_rpc-3.snap
---
source: src/document/rename.rs
expression: tree.can_rename(pos_rpc_request_type)
---
start:
  line: 11
  character: 16
end:
  line: 11
  character: 21
