src/document/snapshots/protols__document__rename__test__can_rename_service_and_rpc.snap
---
source: src/document/rename.rs
expression: tree.can_rename(pos_service)
---
start:
  line: 10
  character: 8
end:
  line: 10
  character: 15
